src/objects/Account_Product__c.object
<CustomObject>
    <fields>
        <fullName>Account_MD__c</fullName>
        <label>Account_MD</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account and Product (Account_MD)</relationshipLabel>
        <relationshipName>Account_MD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Account and Product</relationshipLabel>
        <relationshipName>Account_and_Product</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account and Product</relationshipLabel>
        <relationshipName>Account_and_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account and Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account and Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>